k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk040-webserver
  namespace: skala-practice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sk040-webserver
  template:
    metadata:
      labels:
        app: sk040-webserver
    spec:
      serviceAccountName: default
      volumes:
        - name: app-volume
          emptyDir: {}
      containers:
        - name: webserver
          image: amdp-registry.skala-ai.com/skala25a/sk040-webserver:1.0.0
          imagePullPolicy: Always
          volumeMounts:
            - name: app-volume
              mountPath: /app
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
