k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk040-webserver
  namespace: skala-practice
spec:
  selector:
    app: sk040-webserver
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
